--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "husky": "^4.2.5",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1"
   },
   "husky": {
     "hooks": {
