--- a/package.json
+++ b/package.json
@@ -14,13 +14,25 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
+    "lint-staged": ">=10",
     "prettier": "2.0.5",
-    "pretty-quick": "^2.0.1"
+    "typescript": "^3.9.5"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
