--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "axios": "^0.19.2",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
