--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
     ]
   },
   "dependencies": {
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.3.5",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.11.3",
+    "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
+    "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.2.3"
