--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "jsforce": "^2.0.0-alpha.12",
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
