--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
     "lint": "eslint . --ext ts --ext tsx --ext js"
@@ -27,10 +27,13 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
     "jsforce": "^2.0.0-alpha.12",
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
+    "next-i18next": "^4.5.0",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -47,7 +50,9 @@
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "lint-staged": ">=10",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
 }
