--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
-    "lint": "eslint . --ext ts --ext tsx --ext js"
+    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "lint-fix": "eslint . --ext ts --ext tsx --ext js --fix"
   },
   "husky": {
     "hooks": {
@@ -32,6 +33,7 @@
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
+    "node-html-parser": "^1.2.20",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
