--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn format",
+      "pre-push": "yarn format && yarn lint && yarn type-check"
     }
-  },
-  "lint-staged": {
-    "*.@(ts|tsx)": [
-      "yarn format",
-      "yarn lint",
-      "yarn type-check"
-    ]
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.3",
@@ -52,7 +46,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
-    "lint-staged": ">=10",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5",
     "ts-node": "^8.10.2",
