installed styled-components and added example

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
         "style": true
       }
     ],
-    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "babel-plugin-styled-components"
   ]
 }
