--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "jsforce": "^2.0.0-alpha.12",
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
-    "node-html-parser": "^1.2.20",
     "next-i18next": "^4.5.0",
+    "node-html-parser": "^1.2.20",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
     "swr": "^0.2.3"
   },
   "devDependencies": {
@@ -50,5 +52,8 @@
     "prettier": "2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
