--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-responsive": "^8.1.0",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3"
   },
