--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "cross-env NODE_ENV=production next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
     "lint": "eslint . --ext ts --ext tsx --ext js",
@@ -31,7 +31,7 @@
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
-    "next-i18next": "^4.5.0",
+    "next-i18next": "5.0.0-beta.3",
     "node-html-parser": "^1.2.20",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
