--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,7 @@
     ],
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     [
-      "styled-components",
+      "babel-plugin-styled-components",
       {
         "ssr": true,
         "displayName": true,
