--- a/package.json
+++ b/package.json
@@ -25,18 +25,22 @@
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
     "jsforce": "^2.0.0-alpha.12",
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
     "next": "9.4.4",
     "next-i18next": "5.0.0-beta.3",
+    "next-optimized-images": "^2.6.1",
     "node-html-parser": "^1.2.20",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-responsive": "^8.1.0",
     "styled-components": "^5.1.1",
-    "swr": "^0.2.3"
+    "swr": "^0.2.3",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
