--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jsforce": "^2.0.0-alpha.12",
     "less": "^3.11.3",
     "less-vars-to-js": "^1.3.0",
-    "next": "9.4.4",
+    "next": "^9.5.0",
     "next-i18next": "5.0.0-beta.3",
     "next-optimized-images": "^2.6.1",
     "null-loader": "^4.0.0",
