--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production next start",
+    "start": "cross-env NODE_ENV=production next start -p 3005",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
     "lint": "eslint . --ext ts --ext tsx --ext js",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@google-cloud/storage": "^5.1.2",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
