--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@google-cloud/storage": "^5.1.2",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.3.5",
+    "async-retry-decorator": "^1.3.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^7.0.2",
