--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3005",
+    "dev-real": "USE_REAL_DATA=true next dev -p 3005",
     "build": "next build",
     "start": "cross-env NODE_ENV=production next start -p 3005",
     "type-check": "tsc --pretty --noEmit",
