--- a/package.json
+++ b/package.json
@@ -18,52 +18,50 @@
     }
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
-    "@babel/plugin-proposal-decorators": "^7.10.3",
-    "@google-cloud/storage": "^5.1.2",
-    "@zeit/next-less": "^1.0.1",
-    "antd": "^4.3.5",
-    "async-retry-decorator": "^1.3.0",
     "axios": "^0.19.2",
-    "babel-plugin-import": "^1.13.0",
     "blueimp-md5": "^2.17.0",
-    "cross-env": "^7.0.2",
-    "express": "^4.17.1",
-    "image-trace-loader": "^1.0.2",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
-    "jsforce": "^2.0.0-alpha.12",
-    "less": "^3.11.3",
-    "less-vars-to-js": "^1.3.0",
     "next": "^9.5.0",
-    "next-i18next": "5.0.0-beta.3",
-    "next-optimized-images": "^2.6.1",
-    "null-loader": "^4.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-responsive": "^8.1.0",
-    "styled-components": "^5.1.1",
-    "swr": "^0.2.3",
-    "webp-loader": "^0.6.0"
+    "sharp": "^0.25.4"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
     "@types/blueimp-md5": "^2.7.0",
+    "@types/gtag.js": "^0.0.3",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
     "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.3.5",
+    "async-retry-decorator": "^1.3.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "cross-env": "^7.0.2",
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
-    "nodemon": "^2.0.4",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
+    "jsforce": "^2.0.0-alpha.12",
+    "less": "^3.11.3",
+    "less-vars-to-js": "^1.3.0",
+    "next-optimized-images": "^2.6.1",
+    "null-loader": "^4.0.0",
     "prettier": "2.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-responsive": "^8.1.0",
+    "rosetta": "^1.1.0",
+    "styled-components": "^5.1.1",
+    "swr": "^0.2.3",
+    "typescript": "^3.9.5",
+    "webp-loader": "^0.6.0"
   },
   "resolutions": {
     "styled-components": "^5"
