--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "blueimp-md5": "^2.17.0",
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
+    "react-scroll": "^1.8.1",
     "sharp": "^0.25.4"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-scroll": "^1.8.0",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
