--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     }
   },
   "dependencies": {
+    "@sentry/react": "^5.23.0",
+    "@sentry/tracing": "^5.23.0",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
     "imagemin-svgo": "^8.0.0",
