--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/tracing": "^5.23.0",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
+    "globby": "^11.0.1",
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
     "react-scroll": "^1.8.1",
