--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "dependencies": {
     "@sentry/react": "^5.23.0",
     "@sentry/tracing": "^5.23.0",
+    "@types/googlemaps": "^3.39.13",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
     "globby": "^11.0.1",
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
+    "react-google-maps": "^9.4.5",
     "react-scroll": "^1.8.1",
+    "react-swipeable": "^5.5.1",
     "sharp": "^0.25.4"
   },
   "devDependencies": {
