--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "@sentry/react": "^5.23.0",
     "@sentry/tracing": "^5.23.0",
     "@types/googlemaps": "^3.39.13",
