Search and contact pages (#36)
* first implementation (only design) of the search page

* added mdd style to search page

* fixed flatCard

* created searchService

* first implementation of search bar

* fixed some styles

* fixed style

* updated excludeFiles

* refactored search page

* implemented subscription status page

* fix

* added placeholder to searchBar

* added search bar to home page

* Changed flat detail summary icons from png to svg

* Offices on contact (#33)

* added office selector

* added swiping effect

* added office image

* added office details + tweaks

* added new section

* added office flats section

* linting

* only apply two columns for xlu

* .

* fix

* fix

* fix

* added google map to contact

* tweaks

* lint

* added show-more on contacty

* lint

Co-authored-by: Francisco Rubin Capalbo <frubin@mercadona.es>

* added build optimization to avoid calling getFlats more than once

* changed translation

* added query to search url path

* changed sitemap generation

* back to csr on search page

* implemented filtering

* changed sitemap generation

* added social media google analytics tracking

* fixed filtering by type

* fixed filtering by rooms and bathrooms

* fixed filtering by rooms and bathrooms

* computed filters initial value depending on url query

* Add search map (#34)

* add search map section

* added google map

* add interactions

* added focus on search card

* added new markers

* fix lint

* added google geolocation integration to get coordinates

* lint fix

* added jump to card when selected on map

* lint fix

Co-authored-by: Francisco Rubin Capalbo <frubin@mercadona.es>

* map tweaks

* lint

* scroll tweaks

* added subtitle to search page

* ui tweaks

* fix bug

* lint fix

* Search bar on home (#35)

* added search bar on hero component

* small change

* ui tweaks

*

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3005",
     "dev-real": "USE_REAL_DATA=true next dev -p 3005",
-    "build": "next build",
+    "build": "next build && rm -r .next/temp",
     "start": "cross-env NODE_ENV=production next start -p 3005",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
@@ -18,14 +18,18 @@
     }
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "@sentry/react": "^5.23.0",
     "@sentry/tracing": "^5.23.0",
+    "@types/googlemaps": "^3.39.13",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
     "globby": "^11.0.1",
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
+    "react-google-maps": "^9.4.5",
     "react-scroll": "^1.8.1",
+    "react-swipeable": "^5.5.1",
     "sharp": "^0.25.4"
   },
   "devDependencies": {
