--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3005",
     "dev-real": "USE_REAL_DATA=true next dev -p 3005",
-    "build": "USE_REAL_DATA=true next build",
+    "build": "USE_REAL_DATA=true next build && rm -r .next/temp",
     "start": "cross-env NODE_ENV=production next start -p 3005",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
