--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
     "react-google-maps": "^9.4.5",
+    "react-svgmt": "^1.1.11",
     "react-swipeable": "^5.5.1",
     "sharp": "^0.25.4"
   },
