--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@googlemaps/google-maps-services-js": "^3.1.13",
     "@sentry/react": "^5.23.0",
     "@sentry/tracing": "^5.23.0",
+    "@turf/turf": "^5.1.6",
     "@types/googlemaps": "^3.39.13",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
