--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/googlemaps": "^3.39.13",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
-    "d3-geo": "^2.0.1",
     "globby": "^11.0.1",
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
@@ -38,7 +37,6 @@
     "@ant-design/icons": "^4.2.1",
     "@babel/plugin-proposal-decorators": "^7.10.3",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/d3-geo": "^2.0.0",
     "@types/gtag.js": "^0.0.3",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
@@ -47,7 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^4.3.5",
+    "antd": "4.3.5",
     "async-retry-decorator": "^1.3.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.7",
