--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "imagemin-svgo": "^8.0.0",
     "next": "^9.5.0",
     "react-google-maps": "^9.4.5",
+    "react-string-clamp": "^0.3.1",
     "react-swipeable": "^5.5.1",
     "sharp": "^0.25.4",
     "wpapi": "^1.2.1"
